--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | DropDown</title>
+    <title>DropDown</title>
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" style="width: 1600px; height: 900px; background: #231F20"></canvas>
